# ombre_double

./: README.adoc  pyproject.toml
ombre_double/: __main__.py
ombre_double.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
samples/: lina1.scad  lina1.stl  lina2.scad  lina2.stl
